Fixed tooltipEl appearing behind char slots

--- a/src/main/webapp/styles/gearPlanner.css
+++ b/src/main/webapp/styles/gearPlanner.css
@@ -423,6 +423,7 @@ body.faction-mode-pub .faction-imp
     padding:10px;
     font-weight:normal;
     text-align:left;
+    z-index:10;
 }
 #tooltipItemName
 {
